Refactoring of edge model.